--- a/src/com/dasflash/soundcloud/scup/view/skins/DropDownListSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/DropDownListSkin.mxml
@@ -78,7 +78,7 @@
 
 	<s:HGroup width="100%"
 		gap="0"
-		verticalAlign="bottom">
+		verticalAlign="middle">
 
 		<!--- The button used by the DropDownList. The default skin is DropDownListButtonSkin. -->
 		<s:Button id="openButton"
@@ -87,6 +87,7 @@
 
 		<s:Label id="labelDisplay"
 			width="100%"
+			height="14"
 			verticalAlign="middle"
 			maxDisplayedLines="1"
 			click="hostComponent.openDropDown()"/>
