--- a/src/Scup.css
+++ b/src/Scup.css
@@ -58,7 +58,7 @@ s|SkinnableComponent
 {
 	focusSkin: ClassReference('com.dasflash.soundcloud.scup.view.skins.FocusSkin');
 }
-mx|Button, mx|TextInput, mx|DateField
+mx|Button, mx|TextInput, mx|DateField, mx|Alert, mx|AlertForm
 {
 	fontFamily: LucidaGrandeMX;
 }
@@ -115,14 +115,14 @@ mx|ToolTip {
 {
 	fontFamily: Interstate-Light;
 	fontSize: 22;
-	color: #999999;
+	color: #AAAAAA;
 	textAlign: center;
 }
 .dropHereLabelSub
 {
 	fontFamily: Interstate-Light;
 	fontSize: 16;
-	color: #999999;
+	color: #AAAAAA;
 	textAlign: center;
 }
 .bodyWhite
@@ -186,6 +186,7 @@ mx|ToolTip {
 {
 	font-size: 11px;
 	font-weight: bold;
+	focus-skin: ClassReference(null);
 }
 .expandButtonLight
 {
