--- a/src/com/dasflash/soundcloud/scup/view/skins/LinkButtonSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/LinkButtonSkin.mxml
@@ -41,7 +41,7 @@
 			stateGroups="selectedUpStates, disabledStates, selectedStates"/>
 	</s:states>
 
-	<!-- layer 8: text -->
+	<!-- text -->
 	<s:Label id="labelDisplay"
 		alpha=".8"
 		alpha.overStates="1"/>
