--- a/src/com/dasflash/soundcloud/scup/view/skins/DetailsPanelSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/DetailsPanelSkin.mxml
@@ -7,6 +7,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import com.dasflash.soundcloud.scup.events.AppEvent;
 			import com.dasflash.soundcloud.scup.model.SetData;
 
 			import mx.events.CalendarLayoutChangeEvent;
@@ -55,7 +56,7 @@
 	</s:Rect>
 
 	<s:VGroup width="100%"
-		top="16"
+		top="20"
 		left="20"
 		right="20"
 		bottom="2"
