--- a/src/com/dasflash/soundcloud/scup/view/skins/DetailsPanelSkin.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/DetailsPanelSkin.mxml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+
+	 Copyright 2010 (c) Dorian Roy - dorianroy.com
+
+	 This file is part of Scup.
+
+	 Scup is free software: you can redistribute it and/or modify
+	 it under the terms of the GNU General Public License as published by
+	 the Free Software Foundation, either version 3 of the License, or
+	 (at your option) any later version.
+
+	 Scup is distributed in the hope that it will be useful,
+	 but WITHOUT ANY WARRANTY; without even the implied warranty of
+	 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	 GNU General Public License for more details.
+
+	 You should have received a copy of the GNU General Public License
+	 along with Scup. If not, see <http://www.gnu.org/licenses/>.
+
+-->
+
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:mx="library://ns.adobe.com/flex/mx"
@@ -9,6 +31,7 @@
 		<![CDATA[
 			import com.dasflash.soundcloud.scup.events.AppEvent;
 			import com.dasflash.soundcloud.scup.model.SetData;
+			import com.dasflash.soundcloud.scup.model.TrackData;
 
 			import mx.events.CalendarLayoutChangeEvent;
 
@@ -159,7 +182,7 @@
 			<mx:GridRow styleName="gridRow"
 				width="100%">
 
-				<!--type-->
+				<!-- set type -->
 				<mx:GridItem width="100">
 					<s:Group width="100%">
 						<s:Label text="Set type:"
@@ -170,14 +193,14 @@
 				</mx:GridItem>
 				<mx:GridItem width="100%">
 					<s:Group>
-						<s:DropDownList id="typeDropDown"
+						<s:DropDownList id="playlistTypeDropDown"
 							top="6"
 							width="200"
 							dataProvider="{hostComponent.playlistTypes}"
 							prompt="Pick a type"
 							selectedIndex="{hostComponent.selectedPlaylistTypeIndex}"
 							skinClass="com.dasflash.soundcloud.scup.view.skins.DropDownListSkin"
-							change="hostComponent.selectedPlaylistTypeIndex=typeDropDown.selectedIndex"/>
+							change="hostComponent.selectedPlaylistTypeIndex=playlistTypeDropDown.selectedIndex"/>
 					</s:Group>
 				</mx:GridItem>
 
@@ -205,24 +228,25 @@
 			<mx:GridRow styleName="gridRow"
 				width="100%">
 
-				<!--keywords-->
+				<!-- track type -->
 				<mx:GridItem width="100">
 					<s:Group width="100%">
-						<s:Label text="Keywords:"
+						<s:Label text="Track type:"
 							styleName="bodySoft right"
 							top="8"
 							width="100%"/>
 					</s:Group>
 				</mx:GridItem>
 				<mx:GridItem width="100%">
-					<s:Group width="100%">
-						<s:TextInput id="tagListInput"
-							text="{hostComponent.tag_list}"
-							width="100%"
-							skinClass="com.dasflash.soundcloud.scup.view.skins.TextInputSkin"
-							change="hostComponent.tag_list=tagListInput.text"
-							top="2"
-							toolTip="Separate multiple keywords with spaces"/>
+					<s:Group>
+						<s:DropDownList id="trackTypeDropDown"
+							top="6"
+							width="200"
+							dataProvider="{TrackData.TRACK_TYPES}"
+							prompt="Pick a type"
+							selectedIndex="{hostComponent.selectedTrackTypeIndex}"
+							skinClass="com.dasflash.soundcloud.scup.view.skins.DropDownListSkin"
+							change="hostComponent.selectedTrackTypeIndex=trackTypeDropDown.selectedIndex"/>
 					</s:Group>
 				</mx:GridItem>
 
@@ -247,24 +271,24 @@
 			<mx:GridRow styleName="gridRow"
 				width="100%">
 
-				<!--license-->
+				<!--keywords-->
 				<mx:GridItem width="100">
 					<s:Group width="100%">
-						<s:Label text="License:"
+						<s:Label text="Keywords:"
 							styleName="bodySoft right"
 							top="8"
 							width="100%"/>
 					</s:Group>
 				</mx:GridItem>
 				<mx:GridItem width="100%">
-					<s:Group>
-						<s:DropDownList id="licenseDropDown"
-							top="6"
-							width="200"
-							dataProvider="{SetData.LICENSE_TYPES}"
-							selectedIndex="{hostComponent.selectedLicenseIndex}"
-							skinClass="com.dasflash.soundcloud.scup.view.skins.DropDownListSkin"
-							change="hostComponent.selectedLicenseIndex=licenseDropDown.selectedIndex"/>
+					<s:Group width="100%">
+						<s:TextInput id="tagListInput"
+							text="{hostComponent.tag_list}"
+							width="100%"
+							skinClass="com.dasflash.soundcloud.scup.view.skins.TextInputSkin"
+							change="hostComponent.tag_list=tagListInput.text"
+							top="2"
+							toolTip="Separate multiple keywords with spaces"/>
 					</s:Group>
 				</mx:GridItem>
 
@@ -294,6 +318,27 @@
 			<mx:GridRow styleName="gridRow"
 				width="100%">
 
+				<!--license-->
+				<mx:GridItem width="100">
+					<s:Group width="100%">
+						<s:Label text="License:"
+							styleName="bodySoft right"
+							top="8"
+							width="100%"/>
+					</s:Group>
+				</mx:GridItem>
+				<mx:GridItem width="100%">
+					<s:Group>
+						<s:DropDownList id="licenseDropDown"
+							top="6"
+							width="200"
+							dataProvider="{SetData.LICENSE_TYPES}"
+							selectedIndex="{hostComponent.selectedLicenseIndex}"
+							skinClass="com.dasflash.soundcloud.scup.view.skins.DropDownListSkin"
+							change="hostComponent.selectedLicenseIndex=licenseDropDown.selectedIndex"/>
+					</s:Group>
+				</mx:GridItem>
+
 				<!--buy link-->
 				<mx:GridItem width="100">
 					<s:Group width="100%">
@@ -304,28 +349,22 @@
 					</s:Group>
 				</mx:GridItem>
 				<mx:GridItem width="100%">
-					<s:Group width="100%">
+					<s:HGroup width="100%"
+						paddingTop="3">
 						<s:TextInput id="purchaseUrlInput"
 							text="{hostComponent.purchase_url || 'http://'}"
 							width="100%"
 							skinClass="com.dasflash.soundcloud.scup.view.skins.TextInputSkin"
 							change="hostComponent.purchase_url=purchaseUrlInput.text"
 							top="2"/>
-					</s:Group>
-				</mx:GridItem>
-
-				<!--copy to tracks button-->
-				<mx:GridItem width="100"/>
-				<mx:GridItem width="100%">
-					<s:HGroup width="100%"
-						horizontalAlign="right"
-						paddingTop="3">
+						<!--copy to tracks button-->
 						<s:Button skinClass="com.dasflash.soundcloud.scup.view.skins.CopyToTracksButtonSkin"
 							enabled="{hostComponent.setData.trackCollection.length != 0}"
 							click="hostComponent.copyToTracks()"
 							toolTip="Copy fields to all tracks"/>
 					</s:HGroup>
 				</mx:GridItem>
+
 			</mx:GridRow>
 
 		</mx:Grid>
